apps/jellyfin/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-internal
  namespace: jellyfin
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jellyfin.${LOCAL_DOMAIN}
      secretName: wildcard-local-tls
  rules:
    - host: jellyfin.${LOCAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-external
  namespace: jellyfin
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: jellyfin-authentik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: jellyfin.${PUBLIC_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-api
  namespace: jellyfin
spec:
  ingressClassName: traefik
  rules:
    - host: jellyfin.${PUBLIC_DOMAIN}
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
          - path: /socket
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
          - path: /System/Info/Public
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
          - path: /Users/AuthenticateByName
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
